add mapStruct